--- a/src/main/resources/templates/votaciones.html
+++ b/src/main/resources/templates/votaciones.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
+<!DOCTYPE HTML>
 <html xmlns:th="http://www.thymeleaf.org">
+
 	<head th:fragment="head">
 		<meta charset="UTF-8" />
 		<link href="../static/css/voting.css"
@@ -8,7 +9,7 @@
 	</head>
 	<body>
 		<div class="header" th:fragment="cabecera">
-		    <h1>Voting System</h1>
+			<p>Votaciones</p>
 		</div>
 	</body>
 </html>
