--- a/src/main/resources/templates/votacion.html
+++ b/src/main/resources/templates/votacion.html
@@ -9,20 +9,23 @@
 <body>
 	<div class="header" th:fragment="cabecera" align="center">
 		<h2>Votacion</h2>
-		<hr/>
-		
+		<hr />
+
 		<form>
-		
+
 			<div th:each="opcion: ${opciones}" align="center">
-						<h2>Candidato</h2>
-						<h2 th:text=" ${opcion.descripcion}"></h2>
-					
-						
-					</div>
+			
+				<h2 th:text="'Candidato: '+${opcion.descripcion}"></h2>
+				
+			</div>
+
+			<h2 th:text="'Votacion:'+ ${vot.id}"></h2>
+
 			<a th:href="@{/votaciones}">Volver</a>
+			
 		</form>
-		
+
 	</div>
-	
+
 </body>
 </html>
