--- a/src/main/resources/templates/votaciones.html
+++ b/src/main/resources/templates/votaciones.html
@@ -16,8 +16,7 @@
 
 			<div th:each="v: ${votaciones}" align="center">
 				<input type="radio" name="${v.definicion}"
-					value="${v}" th:text="${v.definicion}"
-					/>
+					value="${v}" th:text="${v.definicion}"/>
 			</div>
 
 			<input type="submit" name="verVotacion" value="Ver Votacion" />
