--- a/src/main/resources/templates/votacion.html
+++ b/src/main/resources/templates/votacion.html
@@ -19,7 +19,7 @@
 				
 			</div>
 
-			<h2 th:text="'Votacion:'+ ${vot.id}"></h2>
+			<h2 th:text="'Votacion:'+ ${vot.idVotacion}"></h2>
 
 			<a th:href="@{/votaciones}">Volver</a>
 			
