--- a/src/main/resources/templates/votacion.html
+++ b/src/main/resources/templates/votacion.html
@@ -13,7 +13,7 @@
 
 		<form id="crear_voto" 
 		th:object="${vot}" 
-		th:action="@{/crearVotacion}" 
+		th:action="@{/guardarVoto}" 
 		method="post">
 		
 		<h3>Lstado de Opciones</h3>
