--- a/src/main/resources/templates/votar.html
+++ b/src/main/resources/templates/votar.html
@@ -11,7 +11,7 @@
 	<div class="header" th:fragment="cabecera" align="center">
 		<h2>Ha Votado</h2>
 	<hr />
-		<p>Votacion creacion con exito</p>
+		<p>Voto emitido con exito</p>
 		<a th:href="@{/votaciones}">Volver a Inicio</a>
 	</div>
 
