--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -32,12 +32,12 @@
 			<br/>
 			
 			<label>Opciones:</label>
-			<input id="descripcion" type="text" th:field="*{descripcion}"/>* introducir opciones eparadas por ;
+			<input id="opciones" type="text" th:field="*{opciones}"/>* introducir opciones eparadas por ;
 			
 			<br/>
 			
 			<input type="submit" name="crearVotacion" value="Crear" />
-			<a th:href="@{/votaciones}">Volver</a>
+			<a th:href="@{/irVotaciones}">Volver</a>
 			
 		</form>
 
