--- a/src/main/resources/templates/errorEleccion.html
+++ b/src/main/resources/templates/errorEleccion.html
@@ -12,7 +12,7 @@
 		<h2>Error</h2>
 	<hr />
 		<p>Error  en la eleccion de la opcion</p>
-		<a th:href="@{/votaciones}">Volver a Inicio</a>
+		<a th:href="@{/irVotaciones}">Volver</a>
 	</div>
 
 </body>
