--- a/src/main/resources/templates/errorInicio.html
+++ b/src/main/resources/templates/errorInicio.html
@@ -9,12 +9,10 @@
 <body>
 
 	<div class="header" th:fragment="cabecera" align="center">
-		<h2>Ha Votado</h2>
+		<h2>Error</h2>
 	<hr />
-	
-		<p>Voto emitido con exito</p>
-		<a th:href="@{/irVotaciones}">Volver</a>
-
+		<p>Error el usuario no existe</p>
+		<a th:href="@{/}">Volver a Inicio</a>
 	</div>
 
 </body>
