--- a/src/main/resources/templates/votacion.html
+++ b/src/main/resources/templates/votacion.html
@@ -32,8 +32,8 @@
 			
 			<input type="submit" name="guardarVoto" value="Votar" />
 			
-			<a th:href="@{/votaciones}">Volver</a>
-			
+			<a th:href="@{/irVotaciones}">Volver</a>
+	
 		</form>
 
 	</div>
