--- a/src/main/resources/templates/votacionCreada.html
+++ b/src/main/resources/templates/votacionCreada.html
@@ -9,12 +9,11 @@
 <body>
 	<div class="header" th:fragment="cabecera" align="center">
 		<h2>Estado Creacion</h2>
-		<hr />
+		<hr/>
 
 		<form>
 
-			
-			<a th:href="@{/votaciones}">Volver a Inicio</a>
+			<a th:href="@{/irVotaciones}">Volver</a>
 			
 		</form>
 
