--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="header" th:fragment="cabecera" align="center">
-		<h2>Crear Votacion</h2>
+		<h2>Inicie Sesion</h2>
 		<hr />
 
 		<form id="crear_votacion" 
