--- a/src/main/resources/templates/errorYaVotado.html
+++ b/src/main/resources/templates/errorYaVotado.html
@@ -10,9 +10,10 @@
 
 	<div class="header" th:fragment="cabecera" align="center">
 		<h2>Error</h2>
-	<hr />
+		<hr/>
 		<p>Error ya ha emitido su voto para la votacion elegida</p>
 		<a th:href="@{/irVotaciones}">Volver a Inicio</a>
 	</div>
 
 </body>
+</html>
