--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -37,7 +37,7 @@
 			<br/>
 			
 			<input type="submit" name="crearVotacion" value="Crear" />
-			<a th:href="@{/irVotaciones}">Volver</a>
+			<a th:href="@{/}">Volver</a>
 			
 		</form>
 
