--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,6 +7,11 @@
 	rel="stylesheet" />
 </head>
 <body>
+	<div align="left">
+		<form>
+			<a th:href="@{/admin}">Administrar</a>
+		</form>
+	</div>
 	<div class="header" th:fragment="cabecera" align="center">
 		<h2>Inicie Sesion</h2>
 		<hr />
@@ -23,8 +28,8 @@
 			
 			<input type="submit" name="crearVotacion" value="Iniciar Sesion" />
 			
-		</form>
-
+		</form>			
+	
 	</div>
 
 </body>
