--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,7 @@
 	<div align="left">
 		<form>
 			<a th:href="@{/admin}">Administrar</a>
+			<a th:href="@{/colegio}">Colegio</a>
 		</form>
 	</div>
 	<div class="header" th:fragment="cabecera" align="center">
