--- a/src/main/resources/templates/votosColegioElectoral.html
+++ b/src/main/resources/templates/votosColegioElectoral.html
@@ -13,7 +13,7 @@
 
 		<form id="VotosColegio" 
 		th:object="${vot}" 
-		th:action="@{/crearVotacion}" 
+		th:action="@{/guardarColegio}" 
 		method="post">
 
 			<label>Id del Colegio Electoral:</label>
