--- a/src/main/resources/templates/errorColegioElectoral.html
+++ b/src/main/resources/templates/errorColegioElectoral.html
@@ -10,9 +10,11 @@
 
 	<div class="header" th:fragment="cabecera" align="center">
 		<h2>Error</h2>
-	<hr />
-		<p>Error en la obtecion de datos del colegio electoral</p>
-		<a th:href="@{/index}">Volver</a>
+		<hr/>
+		<form>
+			<p>Error en la obtecion de datos del colegio electoral</p>
+			<a th:href="@{/}">Volver</a>
+		</form>
 	</div>
 
 </body>
