--- a/src/main/resources/templates/votosColegioElectoral.html
+++ b/src/main/resources/templates/votosColegioElectoral.html
@@ -32,7 +32,7 @@
 			<br/>
 			
 			<input type="submit" name="recuentoDeVotos" value="Crear" />
-			<a th:href="@{/irVotaciones}">Volver</a>
+			<a th:href="@{/}">Volver</a>
 			
 		</form>
 
